umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_co+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Co#c+3#n#u4"} :bonds [] :charge 3 :spin "#u4 #s5"}} :counts {:success true :output {:atoms {"0" "Co#c+3#n#u4"} :bonds [] :charge 3 :spin "#u4 #s5"}}}
