umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_cu+.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Cu#c+#n5"} :bonds [] :charge 1 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "Cu#c+#n5"} :bonds [] :charge 1 :spin "#u0 #s1"}}}
